fix: media 576: align items center for stories

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -527,7 +527,11 @@
         margin-bottom: 24px
   .stories
     margin-bottom: 64px
+    &-wrapper
+      align-items: center
   .story
+    // &-container
+    //   align-items: center
     &-wrapper
       width: 280px
       // height: 840px
@@ -539,6 +543,7 @@
       padding-top: 0
       &:nth-last-child(even)
         margin-bottom: 24px
+        margin-right: 0
       &__text
         width: 270px
         height: 150px
